<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_userhome"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/menu_user_home"
            />
        <item
            android:id="@+id/nav_maketransfers"
            android:icon="@drawable/ic_menu_accounts"
            android:title="@string/menu_user_transactions" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_menu_transactions"
            android:title="@string/menu_user_balance" />

        <item
            android:id="@+id/nav_userprofile"
            android:icon="@drawable/ic_menu_accounts"
            android:title="@string/menu_user_profile" />
    </group>
</menu>