<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_user_navigation"
    app:startDestination="@+id/nav_userhome">

    <fragment
        android:id="@+id/nav_userhome"
        android:name="com.example.recoin.ui.userHome.UserHomeFragment"
        android:label="@string/menu_user_home"
        tools:layout="@layout/fragment_userhome"
          />

    <fragment
        android:id="@+id/nav_maketransfers"
        android:name="com.example.recoin.ui.userMakeTrasfer.MakeTransferFragment"
        android:label="@string/menu_user_transactions"
        tools:layout="@layout/fragment_maketransfer" />


    <fragment
    android:id="@+id/nav_transactions"
    android:name="com.example.recoin.ui.transactions.TransactionsFragment"
    android:label="@string/menu_user_balance"
    tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_userprofile"
        android:name="com.example.recoin.ui.userProfile.UserProfileFragment"
        android:label="@string/menu_user_profile"
        tools:layout="@layout/fragment_userprofile" />



</navigation>